--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Zofia Mrugacz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
   <link rel="stylesheet" href="css/style.css">
+  <script type="text.javascript" src="simple-scroll.js"></script>
   <!-- <link rel="stylesheet" href="css/outline.css"> -->
 </head>
 <body>
@@ -14,8 +15,8 @@
       <img src="images/zm-logo.png" alt="logo">
     </a>
     <ul>
-      <li><a href="#projects">PROJECTS</a></li>
-      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#projects" class="scroll">PROJECTS</a></li>
+      <li><a href="#about" class="scroll">ABOUT</a></li>
     </ul>
   </header>
 
