--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Zofia Mrugacz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
   <link rel="stylesheet" href="css/style.css">
-  <script type="text.javascript" src="simple-scroll.js"></script>
+  <script src="js/simple-scroll.js" charset="utf-8"></script>
   <!-- <link rel="stylesheet" href="css/outline.css"> -->
 </head>
 <body>
@@ -23,7 +23,7 @@
   <main>
     <section id="welcome">
       <div class="container">
-        <h1>A day is happier <br>with good design :)</h1>
+        <h1>A day is happier<br>with good design :)</h1>
       </div>
     </section>
 
@@ -66,7 +66,12 @@
           </div>
           <div class="columns eight">
             <div class="description">
-              <h4>UX DESIGNER - ZOFIA MRUGACZ</h4>
+              <h4>
+                <ul>
+                  <li>UX DESIGNER - </li>
+                  <li>ZOFIA MRUGACZ</li>
+                </ul>
+              </h4>
               <p>With a background in Architecture, I’ve always questioned the ways things are done. It is through understanding and testing with users that I create simple and efficient products, which in the end results in a happy day!
               For further info check out my profile on
               <a href="https://www.linkedin.com/in/zofia-mrugacz-55296956/" target="_blank">Linkedin</a>.</p>
@@ -81,7 +86,10 @@
     <div class="columns twelve">
     <div class="row text-center u-max-full-width" class="container">
     <p>Contact me on</p>
-    <p>Mobile: +447477616898 Email: zofiamrugacz@gmail.com</p>
+      <ul>
+        <li>Mobile: +447477616898</li>
+        <li>Email: zofiamrugacz@gmail.com</li>
+      </ul>
   </div></div>
   </footer>
 
