--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
         </div>
         <div class="columns six project project-two">
           <div>
-            <img class="u-max-full-width" src="images/edge-shop.png" alt="shop">
-            <p>Online Shop for Edge Sports</p>
+            <a href=""><img class="u-max-full-width" src="images/edge-shop.png" alt="shop">
+            <p>Online Shop for Edge Sports</p></a>
           </div>
         </div>
       </div>
       <div class="row text-center">
         <div class="columns six project project-three">
           <div>
-            <img class="u-max-full-width" src="images/x.png" alt="x">
-            <p>Other Project</p>
+            <a href=""><img class="u-max-full-width" src="images/x.png" alt="x">
+            <p>Other Project</p></a>
           </div>
         </div>
         <div class="columns six project project-four">
           <div>
-            <img class="u-max-full-width" src="images/x.png" alt="x">
-            <p>Other Project</p>
+            <a href=""><img class="u-max-full-width" src="images/x.png" alt="x">
+            <p>Other Project</p></a>
           </div>
         </div>
       </div>
