Updating to ES5 and some other small changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <section id="welcome">
       <div class="container">
-        <h1>A day is happier<br>with good design :)</h1>
+        <h1>A day is happier<br>with good UX design :)</h1>
       </div>
     </section>
 
