--- a/index.html
+++ b/index.html
@@ -29,32 +29,28 @@
 
     <section id="projects">
       <div class="row text-center">
-        <div class="columns six project project-one">
+        <a class="columns six project project-one" href="">
           <div>
-            <a href=""><img class="u-max-full-width" src="images/bike.png" alt="bike">
-            <p>Quiet London on Bike App</p></a>
+            <img class="u-max-full-width" src="images/bike.png" alt="bike">
+            <p>Quiet London on Bike App</p>
           </div>
-        </div>
-        <div class="columns six project project-two">
+        </a>
+        <a class="columns six project project-two" href="">
           <div>
-            <a href=""><img class="u-max-full-width" src="images/edge-shop.png" alt="shop">
-            <p>Online Shop for Edge Sports</p></a>
+            <img class="u-max-full-width" src="images/edge-shop.png" alt="shop">
+            <p>Online Shop for Edge Sports</p>
           </div>
-        </div>
-      </div>
+        </a>
       <div class="row text-center">
-        <div class="columns six project project-three">
+        <a class="columns six project project-three">
           <div>
-            <a href=""><img class="u-max-full-width" src="images/x.png" alt="x">
-            <p>Other Project</p></a>
+            <img class="u-max-full-width" src="images/x.png" alt="x"><p>Other Project</p>
           </div>
-        </div>
-        <div class="columns six project project-four">
-          <div>
-            <a href=""><img class="u-max-full-width" src="images/x.png" alt="x">
-            <p>Other Project</p></a>
+        </a>
+        <a class="columns six project project-four">
+          <div><img class="u-max-full-width" src="images/x.png" alt="x"><p>Other Project</p>
           </div>
-        </div>
+        </a>
       </div>
     </section>
 
