--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           </div>
         </a>
       <div class="row text-center">
-        <a class="columns six project project-three">
+        <a class="columns six project project-three" href="">
           <div>
             <img class="u-max-full-width" src="images/x.png" alt="x"><p>Other Project</p>
           </div>
         </a>
-        <a class="columns six project project-four">
+        <a class="columns six project project-four" href="">
           <div><img class="u-max-full-width" src="images/x.png" alt="x"><p>Other Project</p>
           </div>
         </a>
