--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
   <link rel="stylesheet" href="css/style.css">
   <script src="js/simple-scroll.js" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <link rel="stylesheet" href="css/outline.css"> -->
 </head>
 <body>
@@ -72,9 +73,16 @@
               For further info check out my profile on
               <a href="https://www.linkedin.com/in/zofia-mrugacz-55296956/" target="_blank">Linkedin</a>.</p>
               <h5>FUN FACT</h5>
+              </a>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="top">
+      <div class="container">
+        <a href="/" class="scroll">
+          <img src="images/back-to-top.png" alt="top">
       </div>
     </section>
   </main>
